--- a/hello_android/src/main/res/layout/activity_main.xml
+++ b/hello_android/src/main/res/layout/activity_main.xml
@@ -13,5 +13,5 @@
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="更新了" />
+        android:text="更新了---再次" />
 </RelativeLayout>
